12-ingress/Authorization-ingress.yml
apiVersion: v1
kind: Pod
metadata:
  name: node
  namespace: applicationservice
  labels:
    app: node
spec:
  containers:
  - image: jjino/jwt:v1
    name: node-image
    ports:
    - containerPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: node-service
  namespace: applicationservice
spec:
  selector:
    app: node
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: node-service-ingress
  namespace: applicationservice
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/use-private-ip: "true"
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: scanslips
    appgw.ingress.kubernetes.io/health-probe-port: "8080"
    appgw.ingress.kubernetes.io/health-probe-path: "/heathz"
spec:
  rules:
  - http:
      paths:
      - path: /users/api/v1/createuser/
        backend:
          serviceName: node-service
          servicePort: 8080
      - path: /users/api/v1/userinfo/
        backend:
          serviceName: node-service
          servicePort: 8080
      - path: /signin/
        backend:
          serviceName: node-service
          servicePort: 8080
      - path: /heathz/
        backend:
          serviceName: node-service
          servicePort: 8080
